<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Leap\nCalculator</string>
    <string name="bal">Current Balance</string>
    <string name="nill">€0.00</string>
    <string name="addT">Add Trip</string>
    <string name="upBal">Update Balance</string>
    <string name="action_settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="hello_world">Hello world!</string>
    <string name="luasG">Luas\nGreen</string>
    <string name="luasR">Luas\nRed</string>
    <string name="bus">Bus</string>
    <string name="expbus">Express Bus</string>
    <string name="Gexpbus">in iúl buss</string>
    <string name="train">Train</string>
    <string name="cancel">Cancel</string>
    <string name="jType">Journey Type</string>
    <string name="fiveeur">€5</string>
    <string name="teneur">€10</string>
    <string name="twentyeur">€20</string>
    <string name="enterBal">Enter new balance:</string>
    <string name="quUp">Quick Update</string>
    <string name="upd">Update</string>
    <string name="save">Save</string>
    <string name="selFare">Select Fare:</string>
    <string name="ccBFare">City Centre Fare</string>
    <string name="stg1">Stages 1&#8211;3</string>
    <string name="ov13stg">Over 13 Stages</string>
    <string name="stg8">Stages 8&#8211;13</string>
    <string name="stg4">Stages 4&#8211;7</string>
    <string name="Zone4">Zone 4</string>
    <string name="Zone5">Zone 5</string>
    <string name="Zone3">Zone 3</string>
    <string name="Zone2">Zone 2</string>
    <string name="Zone1">Zone 1</string>
    <string name="catA">Category A</string>
    <string name="catB">Category B</string>
    <string name="catG">Category G</string>
    <string name="catJ">Category J</string>
    <string name="catC">Category C</string>
    <string name="catE">Category E</string>
    <string name="catD">Category D</string>
    <string name="imgstr">image</string>
    <string name="back">Back</string>
    <string name="chistory">Clear History</string>
    <string name="LCH">Leap Card History</string>
    <string name="his">History</string>
    <string name="Gapp_name">Leap\nÁireamhán</string>
    <string name="Gbal">Iarmhéid Reatha</string>
    <string name="GaddT">Cuir Turas</string>
    <string name="GupBal">Cuir</string>
    <string name="Gaction_settings">Socruithe</string>
    <string name="Gexit">Scoir</string>
    <string name="GluasG">Luas\nGlas</string>
    <string name="GluasR">Luas\nDearg</string>
    <string name="Gbus">Bus</string>
    <string name="Gtrain">Traein</string>
    <string name="Gcancel">Cealaigh</string>
    <string name="GjType">Cineál turas</string>
    <string name="GenterBal">Iontráil Cothromaíocht Nua:</string>
    <string name="GquUp">Quick Nuashonraigh</string>
    <string name="Gupd">Cuir</string>
    <string name="Gsave">Sábháil</string>
    <string name="GselFare">Roghnaigh Táille:</string>
    <string name="GccBFare">Lár na Cathrach</string>
    <string name="Gstg1">Céimeanna 1&#8211;3</string>
    <string name="Gov13stg">Céimeanna 13+</string>
    <string name="Gstg8">Céimeanna 8&#8211;13</string>
    <string name="Gstg4">Céimeanna 4&#8211;7</string>
    <string name="GZone4">Crios 4</string>
    <string name="GZone5">Crios 5</string>
    <string name="GZone3">Crios 3</string>
    <string name="GZone2">Crios 2</string>
    <string name="GZone1">Crios 1</string>
    <string name="GcatA">Catagóir A</string>
    <string name="GcatB">Catagóir B</string>
    <string name="GcatG">Catagóir G</string>
    <string name="GcatJ">Catagóir J</string>
    <string name="GcatC">Catagóir C</string>
    <string name="GcatE">Catagóir E</string>
    <string name="GcatD">Catagóir D</string>
    <string name="Gimgstr">íomhá</string>
    <string name="Gback">Ar Ais</string>
    <string name="Gchistory">Stair Glan</string>
    <string name="GLCH">Stair Cárta Leap</string>
    <string name="Ghis">Glan</string>
    <string name="sync">Sync</string>
    <string name="title_activity_login">Sync</string>
    <string name="loginstr">Log In:</string>
    <string name="Gloginstr">Logáil Isteach:</string>
    <string name="uname">Username (email)</string>
    <string name="Guname">Ainm Úsáideora (r-phost)</string>
    <string name="pwstr">Password</string>
    <string name="Gpwstr">Pasfhocal</string>
    <string name="sup">Sign Up</string>
    <string name="lin">Log In</string>
    <string name="Glin">Logáil Isteach</string>
    <string name="synInst">Sync your balance on all your devices, just log in or sign up below!</string>
    <string name="GsynInst">Sync do iarmhéid ar gach do feistí, logáil isteach díreach i nó clárú anseo thíos!</string>
    <string name="noAcc">I don\'t have an account, Sign me up!</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="signInfo">Please enter your email address and a password below</string>
    <string name="havAcc">Already have an account? Log In</string>
    <string name="pwconfstr">Confirm Password</string>
    <string name="title_activity_sync">Sync</string>
    <string name="syncInfo">Updating server saves your balance online, updating device loads the online balance to this device</string>
    <string name="upDev">Update Device</string>
    <string name="upSrv">Update Server</string>
    <string name="lgout">Log Out</string>
    <string name="GnoAcc">Ní dóigh liom go bhfuil cuntas, Cláraigh mé suas!</string>
    <string name="GsignInfo">Cuir isteach do sheoladh ríomhphoist agus pasfhocal thíos</string>
    <string name="GhavAcc">Cheana féin tá cuntas? Logáil Isteach</string>
    <string name="Gpwconfstr">Dearbhaigh Pasfhocal</string>
    <string name="GsyncInfo">Thabhairt cothrom le dáta freastalaí Sábhálann do chothromaíocht ar líne, thabhairt cothrom le dáta ualaí gléas an t-iarmhéid ar líne leis an ngléas seo</string>
    <string name="GupDev">Gléas Nuashonraigh</string>
    <string name="GupSrv">Freastalaí nuashonrú</string>
    <string name="Glgout">Logáil Amach</string>
    <string name="GSup">Cláraigh</string>
    <string name="title_activity_spalsh_screen">Leap Calculator</string>

</resources>