<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/sync"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/sync"/>
    <item
        android:id="@+id/Gsync"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/sync"/>
    
    <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/Gsettings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/Gaction_settings"/>
    
    <item
        android:id="@+id/exit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/exit"/>
    
    <item
        android:id="@+id/Gexit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/Gexit"/>

</menu>