<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgimage"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtQUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/quUp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/bGreen" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" >

            <Button
                android:id="@+id/btnEur10"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button"
                android:text="@string/teneur"
                android:textColor="@color/bGreen" />

            <Button
                android:id="@+id/btnEur5"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/button"
                android:text="@string/fiveeur"
                android:textColor="@color/bGreen" />

            <Button
                android:id="@+id/btnEur20"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/button"
                android:text="@string/twentyeur"
                android:textColor="@color/bGreen" />
        </RelativeLayout>

        <TextView
            android:id="@+id/txtTLbl1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/enterBal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/bGreen" />

        <EditText
            android:id="@+id/edtBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="numberDecimal|numberSigned"
            android:textColor="@color/bgcolour" />

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button"
            android:text="@string/upd"
            android:textColor="@color/bGreen" />

        <Button
            android:id="@+id/btnHistory"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:text="@string/his"
            android:textColor="@color/bGreen" />

    </LinearLayout>

</ScrollView>